force-app/main/default/objects/Retail_Monthly_Price_Update__c/Retail_Monthly_Price_Update__c.object-meta.xml
<CustomObject>
    <label>Retail Monthly Price Update</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>Monthly Price Update ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Monthly Price Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>