force-app/main/default/objects/Retail_Monthly_Price_Update__c/fields/Add_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Add_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Add Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Monthly Price Updates</relationshipLabel>
    <relationshipName>Retail_Monthly_Price_Updates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>