force-app/main/default/objects/Retail_Monthly_Price_Update__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date-Time</label>
    <type>DateTime</type>
</CustomField>